fix:recommend img align:

--- a/css/master.css
+++ b/css/master.css
@@ -232,6 +232,7 @@ html {
 .recommend-list__card {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   flex-direction: column;
   margin-bottom: 0.5rem;
   padding-bottom: 1.5rem;
